feat: docs (#6)
* feat: add docs

* feat: add docs, handle cross table operations, async batch, add logging

* feat: fix warning

* feat: disable doc publishing

* feat: fix checkStyle issues